<resources>
    <string name="app_name">ཤེས་རིགCARE</string>trt
    <string name="forgot_passwordMainActivity">Forgot Password?</string>

    <string name="passwordMainActivity">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">LOGIN</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="save">SAVE</string>
    <string name="enter_class">Enter class</string>

</resources>









