<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleTextColor="@color/white"
        android:background="@drawable/toolbar"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="179dp"
        android:layout_below="@+id/toolbar"
        android:src="@drawable/logosherig" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="376dp"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="205dp"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_a_new_account"
            android:textColor="@color/gray"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:drawableRight="@drawable/_person"
            android:hint="@string/username"
            android:inputType="textCapSentences"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            tools:ignore="MissingClass" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:drawableRight="@drawable/_email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/gray" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableRight="@drawable/_lock"
            android:hint="@string/password"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:textColorHint="@color/gray" />

        <EditText
            android:id="@+id/cpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:drawableRight="@drawable/_lock"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColorHint="@color/gray" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="290dp"
            android:layout_height="39dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/gradient"
            android:text="register"
            android:textColor="@color/white" />


    </LinearLayout>


</RelativeLayout>
